10025 FIX Discovery page: Improve usability
Several changes have been made:

<ul>
<li>The plugin name column can now be hidden</li>
<li>The columns check parameters, discovered labels and plugin names are now hidden by default as intended</li>
<li>The action buttons on top of the page have been reordered</li>
</ul>

--- a/web/htdocs/themes/facelift/scss/_wato.scss
+++ b/web/htdocs/themes/facelift/scss/_wato.scss
@@ -237,6 +237,22 @@ table.validationerror  {
   }
 }
 
+div#service_container div.action_buttons {
+  div.left {
+    float: left;
+  }
+
+  div.right {
+    float: right;
+  }
+
+  span.button_spacer {
+    display: inline-block;
+    width: 12px;
+  }
+}
+
+
 table.data tr.data > td.bulkactions {
   background: transparent;
   border: none;
